--- a/style.css
+++ b/style.css
@@ -151,8 +151,12 @@ main {
     border-radius: 5px;
 }
 
+.todays-bar-color{
+    background-color: hsl(186, 34%, 60%);
+}
+
 hr{
     border: 1px solid rgb(0, 0, 0, 0.2);
     width: 100%;
-    margin: 5px 0 0 0;
+    margin: 20px 0 0 0;
 }
