--- a/style.css
+++ b/style.css
@@ -108,7 +108,6 @@ main {
     display: flex;
     justify-content: space-between;
     align-items: flex-end;
-    padding: 0 50px 0 40px;
 }
 
 .black{
@@ -136,8 +135,6 @@ main {
     width: 10%;
     display: flex;
     flex-direction: column;
-    /* justify-content: center; */
-    /* align-items: center; */
 }
 
 .chart-bar-data > p{
@@ -149,10 +146,32 @@ main {
     width: 100%;
     background-color: hsl(10, 79%, 65%);
     border-radius: 5px;
+    cursor: pointer;
 }
 
-.todays-bar-color{
+.chart-bar:hover{
+    background-color: hsla(10, 79%, 65%, 0.5);
+}
+
+.bar-color-today{
     background-color: hsl(186, 34%, 60%);
+}
+
+.bar-color-today:hover{
+    background-color: hsla(186, 34%, 60%, 0.5);
+}
+
+.display-amount{
+    box-sizing: content-box;
+    width: 60px;
+    padding: 10px;
+    margin-bottom: 10px;
+    background-color: hsl(25, 47%, 15%);
+    color: white;
+    border-radius: 4px;
+    align-self: center;
+    text-align: center;
+    
 }
 
 hr{
