--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ main {
 }
 
 h1{
-    font-size: 2.3em;
+    font-size: 2.5em;
     margin: 0 0 0 0;
     width: 100%;
     text-align: left;
@@ -103,7 +103,7 @@ h1{
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    align-items: flex-end;
+    align-items: center;
     
 }
 
