--- a/style.css
+++ b/style.css
@@ -12,11 +12,13 @@ main {
     display: flex;
     justify-content: center;
     align-items: center;
+
 }
 
 .main-container {
-    height: 65%;
-    width: 40%;
+
+    height: 725px;
+    width: 575px;
 
     display: flex;
     flex-direction: column;
@@ -48,7 +50,7 @@ main {
 }
 
 h1{
-    font-size: 3em;
+    font-size: 2.3em;
     margin: 0 0 0 0;
     width: 100%;
     text-align: left;
@@ -65,13 +67,13 @@ h1{
 
 .balance-name {
     font-weight: 400;
-    font-size: 1.6em;
+    font-size: 1.2em;
     color: white;
 }
 
 .balance-value {
     font-weight: 700;
-    font-size: 2.8em;
+    font-size: 2.3em;
     color: white;
 }
 
@@ -113,7 +115,7 @@ h1{
     width: 100%;
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-end;
 }
 
 .brown{
@@ -125,7 +127,7 @@ h1{
 }
 
 .bigger{
-    font-size: 4em;
+    font-size: 3.2em;
 }
 
 .smaller{
@@ -169,7 +171,7 @@ h1{
 
 .display-amount{
     box-sizing: content-box;
-    width: 60px;
+    width: 65px;
     padding: 10px;
     margin-bottom: 10px;
     background-color: hsl(25, 47%, 15%);
@@ -178,6 +180,7 @@ h1{
     align-self: center;
     text-align: center;
     font-weight: 700;
+    z-index: 2;
     
 }
 
@@ -185,4 +188,20 @@ hr{
     border: 1px solid rgb(0, 0, 0, 0.2);
     width: 100%;
     margin: 20px 0 0 0;
+}
+
+@media (max-height: 950px) {
+    .main-container {
+
+        height: 90%;
+        max-height: 700px;
+        width: 50%;
+        max-width: 700px;
+
+    }
+
+    .second {
+    
+        padding: 20px 40px 20px 40px;
+    }
 }
