--- a/style.css
+++ b/style.css
@@ -49,6 +49,10 @@ main {
     padding: 40px 40px 40px 40px;
 }
 
+.space{
+    margin-bottom: 10px;
+}
+
 h1{
     font-size: 2.3em;
     margin: 0 0 0 0;
@@ -81,6 +85,7 @@ h1{
     display: flex;
     flex-direction: row;
 }
+
 .circle{
     height: 60px;
     width: 60px;
@@ -108,7 +113,6 @@ h1{
     align-items: flex-end;
     
 }
-
 
 .summary{
     height: 25%;
@@ -190,7 +194,7 @@ hr{
     margin: 20px 0 0 0;
 }
 
-@media (max-height: 950px) {
+@media (max-height: 950px) and (min-width: 435px) {
     .main-container {
 
         height: 90%;
@@ -204,4 +208,49 @@ hr{
     
         padding: 20px 40px 20px 40px;
     }
+}
+
+@media (max-width: 710px) {
+
+    .main-container {
+
+        height: 80%;
+        /* max-height: 700px; */
+        width: 90%;
+        /* max-width: 700px; */
+
+    }
+
+    .balance-name {
+        font-size: 1em;
+    }
+
+    .balance-value {
+        font-size: 1.6em;
+    }
+
+    .bigger{
+        font-size: 2.1em;
+    }
+
+    .first {
+        padding: 20px 25px 20px 25px;
+    }
+    
+    .second {
+        padding: 15px 15px 20px 15px;
+        height: 70%;
+    }
+
+    h1{
+        font-size: 1.8em;
+    }
+
+    .circle{
+        height: 50px;
+        width: 50px;
+        border-radius: 50%;
+    
+    }
+   
 }
